--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
-0.002   2019-01-30 (PERLANCAR)
+0.002   2019-01-30  Released-By: PERLANCAR
 
 	- [Bugfix] completion fix.
 
 
-0.001   2019-01-30 (PERLANCAR)
+0.001   2019-01-30  Released-By: PERLANCAR
 
         - First release.
